add: configuring our store for departments, adding in actions, reducers, selectors and effects to demonstrate the journey through ngrx.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-Hello World
+Loading => {{loading$ | async }}
+
+<ul>
+    @for (department of departments$ | async; track department?.departmentId) {
+        <li>{{department.departmentName}}</li>
+    }
+</ul>
+
 <router-outlet />
