add: adding in a navbar, fixed card styling and added routing to the employee component.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,9 @@
-<section class="container">
-    @for (employee of employees$ | async; track employee?.employeeId) {
-        <app-card [employee]="employee"></app-card>
-    }
+<section class="employees">
+    <div class="employees-container">
+        <div class="employees-wrapper">
+            @for (employee of employees$ | async; track employee?.employeeId) {
+                <app-card [employee]="employee"></app-card>
+            }
+        </div>
+    </div>
 </section>
