--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,25 +1,24 @@
 <div class="card">
     <div class="card-header">
-        @if(employee.gender === 'Male') {
-            <img src="images/male.jpg" alt={{employee.fullName}} title={{employee.fullName}} />
-        } @else {
-            <img src="images/female.jpg" alt={{employee.fullName}} title={{employee.fullName}} />
-        }
+        <img 
+            src="images/{{employee.gender === 'Male' ? 'male' : 'female'}}.jpg" 
+            alt={{employee.fullName}} 
+            title={{employee.fullName}} />
     </div>
     <div class="card-body">
-        <h3>{{employee.fullName}}</h3>
+        <h3>{{employee.fullName}}</h3> 
         <ul>
-            <li>Email: {{employee.email}}</li>
-            <li>Phone: {{employee.phone}}</li>
-            <li>Gender: {{employee.gender}}</li>
-            <li>Salary: {{employee.salary}}</li>
-            <li>Department: {{employee.departmentName}}</li>
-            <li>Date of Joining: {{employee.dateOfJoining}}</li>
-            <li>Employee Type: {{employee.employeeType}}</li>
+            <li><span>Email:</span> {{employee.email}}</li>
+            <li><span>Phone:</span> {{employee.phone}}</li>
+            <li><span>Gender:</span> {{employee.gender}}</li>
+            <li><span>Salary:</span> {{employee.salary}}</li>
+            <li><span>Department:</span> {{employee.departmentName}}</li>
+            <li><span>Date of Joining:</span> {{employee.dateOfJoining}}</li>
+            <li><span>Employee Type:</span> {{employee.employeeType}}</li>
         </ul>
     </div>
     <div class="card-footer">
-        <button>Update</button>
-        <button>Delete</button>
+        <button class="button button-primary" (click)="viewMore(employee.employeeId)">View More</button>
+        <button class="button button-danger" (click)="deleteEmployee(employee.employeeId)">Delete</button>
     </div>
 </div>
