--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,5 +1,11 @@
+:host {
+    width: 31.5%;
+}
+
 .card {
     background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     &-header {
         display: flex;
         align-items: center;
@@ -11,15 +17,21 @@
         }
     }
     &-body {
-        padding: 1.5rem; 
+        padding: 1.5rem 2rem; 
         h3 {
-            font-size: 1.8rem;
+            font-size: 2rem;
             margin-bottom: 5px; 
+            text-transform: capitalize;
         }
         ul {
             list-style-type: none;
+            font-size: 1.2rem;
             li {
-                line-height: 1.4;
+                line-height: 1.6;
+                span {
+                    font-weight: 700;
+                    color: #008e9b; 
+                }
             }
         }
     }
