--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
     <div class="container">
-        <h1>NgRx Playground</h1>
+        <h1 routerLink="">NgRx Playground</h1>
     </div>
 </nav>
