--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar">
-    <div class="container">
-        <h1 routerLink="">NgRx Playground</h1>
+    <div class="navbar-container">
+        <div class="navbar-wrapper">
+            <h1 routerLink="">NgRx Playground</h1>
+            <button class="button button-primary">Create Employee</button>
+        </div>
     </div>
 </nav>
