add: adding in the employee form and getting detaisl into a submited payload before API call.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="navbar-container">
         <div class="navbar-wrapper">
             <h1 routerLink="">NgRx Playground</h1>
-            <button class="button button-primary">Create Employee</button>
+            <button class="button button-primary" (click)="navigateToFormComponent()">Create Employee</button>
         </div>
     </div>
 </nav>
