add: adding in getEmployeeById setup to pull in the employee from the state.

--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -1,4 +1,4 @@
-@let employee = (employee$ | async);
+@let employee = (currentEmployee$ | async);
 
 <section class="employee">
     <div class="employee-container">
