add: adding in loading and error handling to the employee component and updating effects to to return on a single line/ on error for delete show error toastr.

--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -1,7 +1,14 @@
 @let employee = (currentEmployee$ | async);
+@let error = (error$ | async);
+@let loading = (loading$ | async);
 
 <section class="employee">
     <div class="employee-container">
+        @if (loading) {
+            <app-loader />
+        } @else if (error) {
+            <app-error [error]="error"/>
+        } @else {
         <div class="employee-wrapper">
             <h3>{{employee?.fullName}}</h3> 
             <button class="button button-primary" routerLink="/">Go back</button>
@@ -26,6 +33,7 @@
                 </ul>
             </div>
         </div>
+        }
     </div>
 </section>
 
